# awshttp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
awshttp/: __init__.py  awshttp.py
docs/: PUBLISHING.md  README.md  RELEASE_CHECKLIST.md
examples/: README.md  change_console_color.py
tests/: __init__.py  test_basic.py
