[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awshttp"
version = "0.1.0"
authors = [{name = "Sam Fakhreddine"}]
description = "Minimal AWS SigV4 signed HTTP requests library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aws", "sigv4", "http", "requests", "lambda", "api-gateway"]
dependencies = [
    "boto3>=1.26.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/sam-fakhreddine/awshttp"
Repository = "https://github.com/sam-fakhreddine/awshttp"
Issues = "https://github.com/sam-fakhreddine/awshttp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
